2008-05-26  Richard Hult  <richard@imendio.com>

	Bug 530353 – Mac-like gtk_accelerator_get_label()

	* gtk/gtkaccellabel.c: (gtk_accel_label_class_init),
	(append_keyval_symbol), (_gtk_accel_label_class_get_accelerator_label):
	On quartz, make gtk_accelerator_get_label() format a Mac-like
	string, using unicode characters for modifier keys, arrows, delete
	etc. Patch from Yevgen Muntyan.

2008-05-26  Richard Hult  <richard@imendio.com>

	Bug 534869 – Length miscalculation in
	_gtk_quartz_get_selection_data_from_pasteboard

	* gtk/gtkquartz.c: (_gtk_quartz_get_selection_data_from_pasteboard):
	Get the number of bytes, not the number of characters, patch from
	Yevgen Muntyan.

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.c: Some doc formatting fixes.

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 511163 – Remove pango_extents_to_pixels() calls

	* gtk/gtkcellrenderertext.c (get_size): Use
	pango_layout_get_pixel_extents.

	* configure.in: Bump Pango requirement to 1.20

	* INSTALL.in: Update required versions

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 513811 – Use cairo_format_stride_for_width()

	* gtk/gtkhsv.c (paint_ring, paint_triangle):
	* gdk/gdkcairo.c (gdk_cairo_set_source_pixbuf): Use
	cairo_format_stride_for_width, proposed by Behdad Esfahbod.

	* configure.in: Bump cairo requirement to 1.6.0

	* INSTALL.in: Update required versions

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkshow.[hc]: Formatting fixes

	* gtk/gtkmountoperation.c: Add docs

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 507389 – use gslice for gtksettings

	* gtk/gtksettings.c: Change from g_new0/g_free to use GSlice.
	Report and patch by Christian Persch.

2008-05-25  Cody Russell  <bratsche@gnome.org>

	Bug 523562 - gtk-update-icon-cache core dumps when run concurrently and
	when options are missing

	* gtk/updateiconcache.c: Open the cache file (O_CREAT | O_EXCL) so