@@ -1,4 +1,4 @@
-/* 
+/*
  * GTK - The GIMP Toolkit
  * Copyright (C) 2008  Jaap Haitsma <jaap@haitsma.org>
  *
@@ -19,22 +19,20 @@
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
  */
+
 #ifndef __GTK_SHOW_H__
 #define __GTK_SHOW_H__
 
 #include <glib.h>
-#include "gdk/gdkscreen.h"
+#include "gdk/gdk.h"
 
 G_BEGIN_DECLS
 
-gboolean gtk_show_uri  (GdkScreen   *screen, 
-                        const gchar *uri, 
-                        guint32      timestamp, 
+gboolean gtk_show_uri  (GdkScreen   *screen,
+                        const gchar *uri,
+                        guint32      timestamp,
                         GError     **error);
 
 G_END_DECLS
 
 #endif /* __GTK_SHOW_H__ */
-
-
-
